# indicator-synapse

./: .appdata.xml  .bzrignore  .travis.yml  Build.md  CMakeLists.txt  Makefile.am  README.md  configure.ac  meson.build
data/: Makefile.am  com.github.tom95.indicator-synapse  com.github.tom95.indicator-synapse.appdata.xml  com.github.tom95.indicator-synapse.desktop  de.tombeckmann.synapse.appdata.xml  net.launchpad.synapse-project.gschema.xml.in.in
debian/: changelog  control  copyright  indicator-synapse.install  rules
po/: POTFILES.in  POTFILES.skip  synapse.pot
src/: CMakeLists.txt  Makefile.am
src/core/: common-actions.vala  config-service.vala  data-sink.vala  dbus-service.vala  desktop-file-service.vala  match.vala  plugin.vala  query.vala  relevancy-backend-zg.vala  relevancy-service.vala  result-set.vala  utils.vala  volume-service.vala
src/indicator/: Makefile.am  indicator-search.c  indicator-search.h  main.vala  match-item.vala  menu.vala  selectable-list.vala  settings.vala
src/plugins/: Makefile.am  banshee-plugin.vala  calculator-plugin.vala  chat-actions-plugin.vala  chromium-plugin.vala  command-plugin.vala  desktop-file-plugin.vala  devhelp-search.vala  dictionary.vala  directory-plugin.vala  file-op-plugin.vala  filezilla-plugin.vala  gnome-screensaver-plugin.vala  gnome-session-plugin.vala  hello-world-plugin.vala  hybrid-search-plugin.vala  imgur-plugin.vala  launchpad-plugin.vala  locate-plugin.vala  opensearch.vala  pastebin-plugin.vala  pidgin-plugin.vala  rhythmbox-plugin.vala  selection-plugin.vala  ssh-plugin.vala  system-management.vala  test-slow-plugin.vala  wolframalpha-plugin.vala  xnoise-media-player-plugin.vala  zeitgeist-plugin.vala  zeitgeist-related.vala
vapi/: indicator3-0.4.vapi
